@@ -4,6 +4,7 @@ Added
     Control history duration on homepage
     Snapshot scheduling
     Filter events table by user & event name on frontend
+    Support new network metric keys (#433)
 
 Changed
     Use correct width for terminal on init
@@ -14,6 +15,7 @@ Changed
     Improve user parameter display on instance events
     Improve create project modal UI / UX
     Support limits when creating a project (#434)
+    Show packets_dropped_outbound & packets_dropped_inbound on networks overview
 
 Fixed
     First run doesn't toggle passwords properly (#390)
